fix: horizontal scrolling in narrow viewports

--- a/src/styles/index.module.css
+++ b/src/styles/index.module.css
@@ -4,9 +4,9 @@
 }
 
 .steps {
-	margin-top: 40px;
 	padding: 40px;
 	width: 100%;
+	margin: 40px -40px;
 }
 
 .stepContent {
